--- a/pages/stylesheets/site.css
+++ b/pages/stylesheets/site.css
@@ -1,3 +1,20 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@source "../../layouts";
+@source "../../helpers";
+@source "../../partials";
+@source "../";
+@plugin "@tailwindcss/typography";
+@plugin "@opengraphplus/tailwind";
+
+@theme {
+  --color-brown-50: #fdf8f6;
+  --color-brown-100: #f2e8e5;
+  --color-brown-200: #eaddd7;
+  --color-brown-300: #e0cec7;
+  --color-brown-400: #d2bab0;
+  --color-brown-500: #bfa094;
+  --color-brown-600: #a18072;
+  --color-brown-700: #977669;
+  --color-brown-800: #846358;
+  --color-brown-900: #43302b;
+}
